--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -35,6 +35,10 @@ Metrics/LineLength:
 Metrics/MethodLength:
   Max: 20
 
+Metrics/BlockLength:
+  Exclude:
+    - 'test/**/*'
+
 Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: comma
 
