--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -33,9 +33,13 @@ Metrics/LineLength:
   Max: 100
 
 Metrics/MethodLength:
-  Max: 20
+  Max: 40
 
 Metrics/BlockLength:
+  Exclude:
+    - 'test/**/*'
+
+Style/NumericLiterals:
   Exclude:
     - 'test/**/*'
 
