Cancel order as async operation

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -35,6 +35,9 @@ Metrics/LineLength:
 Metrics/MethodLength:
   Max: 40
 
+Metrics/ClassLength:
+  Max: 150
+
 Metrics/BlockLength:
   Exclude:
     - 'test/**/*'
